# regulation_search_codex_chatgpt54

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
deploy/beget/: .env.example  Dockerfile.ingest-api  Dockerfile.search-api  README.md  docker-compose.yml  healthcheck.js  init-data.sh
docs/: LOGGING_DEPLOY_RUNBOOK.md  LOGGING_SCHEMA.md  LOGGING_SMOKE_TEST_CHECKLIST.md  PROJECT_DESCRIPTION.md  PROJECT_ONE_PAGER.md  PROJECT_STATUS.md  Обследование.md  Описание прототипа Поиск по регламентам, v1 (2).docx  Описание прототипа Поиск по регламентам, v1.docx
documents/: 09.01 Организация проектной деятельности.docx  09.04 Заявки на расчёт в CRM.docx  13.11 Командировки.docx  21.01 Субподрядчики на коммерческих проектах.docx  51.04 Кредитные сделки.docx  53.04 Маржа.docx  61.01 Основное о договорах.docx
n8n/: regulation_search_dispatcher.json  regulation_search_hybrid.json
scripts/: build_logging_deploy_bundle.sh  index_documents.py  parse_documents.py
search-api/: .env.example  app.py  chunker.py  config.py  create_collection.py  lemmatizer.py  requirements.txt  search_engine.py  upload_docs.py
site/: .htaccess  app.js  index.html  styles.css
site/regulation-proxy/: access.php  auth.php  collection.php  feedback.php  search.php  upload.php
src/regulation_search/: config.py  docx_parser.py  ingest_api.py  qdrant_indexer.py  search_api.py
