[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regulation-search"
version = "0.1.0"
description = "Hybrid search over DOCX regulations with Qdrant and n8n"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastembed>=0.7.0",
  "openai>=1.68.0",
  "python-dotenv>=1.0.1",
  "qdrant-client>=1.14.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

